--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@grammyjs/conversations": "^1.1.1",
     "@grammyjs/menu": "^1.2.0",
+    "@types/express": "^5.0.3",
     "dotenv": "^16.4.1",
+    "express": "^5.1.0",
     "grammy": "^1.21.1",
     "mysql2": "^3.9.1",
     "typeorm": "^0.3.20",
