--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,20 +5,8 @@ services:
     build: .
     container_name: xrocket-pay-bot
     restart: unless-stopped
-    environment:
-      - NODE_ENV=production
-      - BOT_TOKEN=${BOT_TOKEN}
-      - XROCKET_PAY_API_KEY=${XROCKET_PAY_API_KEY}
-      - XROCKET_PAY_SECRET_KEY=${XROCKET_PAY_SECRET_KEY}
-      - XROCKET_PAY_BASE_URL=${XROCKET_PAY_BASE_URL}
-      - WEBHOOK_URL=${WEBHOOK_URL}
-      - WEBHOOK_SECRET=${WEBHOOK_SECRET}
-      - DB_HOST=mysql
-      - DB_PORT=3306
-      - DB_USERNAME=${DB_USERNAME}
-      - DB_PASSWORD=${DB_PASSWORD}
-      - DB_DATABASE=${DB_DATABASE}
-      - PORT=3000
+    env_file:
+      - .env
     depends_on:
       mysql:
         condition: service_healthy
@@ -45,11 +33,8 @@ services:
     image: mysql:8.0
     container_name: xrocket-pay-mysql
     restart: unless-stopped
-    environment:
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-      - MYSQL_DATABASE=${DB_DATABASE}
-      - MYSQL_USER=${DB_USERNAME}
-      - MYSQL_PASSWORD=${DB_PASSWORD}
+    env_file:
+      - .env
     volumes:
       - mysql_data:/var/lib/mysql
       - ./mysql/init:/docker-entrypoint-initdb.d
