--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@ BOT_TOKEN=your_telegram_bot_token_here
 # Database Configuration
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
-DATABASE_USERNAME=root
+DATABASE_USERNAME=your_user
+MYSQL_ROOT_PASSWORD=your_root_password
 DATABASE_PASSWORD=your_password_here
 DATABASE_NAME=xrocket_pay_bot
 
@@ -14,3 +15,4 @@ XROCKET_API_KEY=your_api_key_here
 WEBHOOK_URL=/webhook/invoice
 
 NODE_ENV=production
+
