feat: complete i18n implementation and fix race conditions

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@grammyjs/conversations": "^1.1.1",
+    "@grammyjs/i18n": "^1.1.2",
     "@grammyjs/menu": "^1.2.0",
     "@types/express": "^5.0.3",
     "dotenv": "^16.4.1",
